--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Run `docker-compose run web config generate-secret-key`
 # to get the SENTRY_SECRET_KEY value.
 SENTRY_SECRET_KEY=
+SENTRY_IMAGE=sentry:9.1.2
+DOMAIN=artdocker.ml
