change to external domain

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,8 @@ services:
     # t is also possible to partially override values in extension fields using the YAML merge type.
     <<: *defaults
     # Expose ports
-    ports:
-      - '9000:9000'
+#    ports:
+#      - '9000:9000'
 
   cron:
     <<: *defaults
@@ -70,17 +70,17 @@ services:
     # Override the default command
     command: run worker
 
-#  https-portal:
-#    image: steveltn/https-portal
-#    ports:
-#      - '80:80'
-#      - '443:443'
-#    depends_on:
-#      - web
-#    restart: unless-stopped
-#    environment:
-#      DOMAINS: '${DOMAIN} -> http://web:9000'
-#      STAGE: 'production'
+  https-portal:
+    image: steveltn/https-portal
+    ports:
+      - '80:80'
+      - '443:443'
+    depends_on:
+      - web
+    restart: unless-stopped
+    environment:
+      DOMAINS: '${DOMAIN} -> http://web:9000'
+      STAGE: 'production'
 
 
 # Named volume
